--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <button class="yes-btn" onclick="window.location.href='yes.html'">
       Yes
     </button>
-    <button class="no-btn" onclick="window.locaiton.href='no.html'">
-      No
-    </button>
+    <button class="no-btn" onclick="window.location.href='no.html'">
+  No
+</button>
   </div>
 
 </body>
