--- a/no.html
+++ b/no.html
@@ -68,9 +68,9 @@
       <button class="yes-btn" onclick="window.location.href='yes.html'">
         Yes
       </button>
-      <button class="no-btn" onclick="window.locaiton.href='noagain.html'">
-        No
-      </button>
+      <button class="no-btn" onclick="window.location.href='noagain.html'">
+  No
+</button>
     </div>
   </div>
 </body>
