--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Be My Valentine 💖</title>
+  <title>click me 🥸</title>
   <style>
     body {
       margin: 0;
