Add val-img class and image to index.html
Added styling for val-img class and included an image.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       border-radius: 0;
     }
 
+    .val-img {
+  width: 250px;
+  display: block;
+  margin: 15px auto;
+  border-radius: 18px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
+}
+
     button:hover {
       transform: scale(1.05);
     }
@@ -64,8 +72,9 @@
 
 <body>
 
-  <div class="tenor-gif-embed" data-postid="15987767501262185012" data-share-method="host" data-aspect-ratio="0.726908" data-width="20%"><a href="https://tenor.com/view/dog-heart-gingerbread-golden-retriever-gif-15987767501262185012">Dog Heart GIF</a>from <a href="https://tenor.com/search/dog-gifs">Dog GIFs</a></div>
-  <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <script 
+    <img src="val_images/IMG_0056.jpeg" alt="Valentine image 1" class="val-img">
+  </script>
 
   <br>
 
