Replace GIF with a Valentine image

--- a/yes.html
+++ b/yes.html
@@ -22,9 +22,7 @@
 <body>
   <div>
 
-    <div class="gif-container" data-aspect-ratio="1.11215" data-width="50%">
-      <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTFxZGF5aThiazhsYWo3YWVmNWx4MWY5bDJkZ3I5NzNxdTh3Y3J4bSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/w9ldWuCKh2Du5YVUiY/giphy.gif" alt="Cute Valentine GIF" class="valentine-gif">
-    </div>
+     <img src="val_images/IMG_9914.jpeg" alt="Valentine image 1" class="val-img">
 
     <h1>Yippeee!!</h1>
     <p> </p>
