Replace GIF container with an image

--- a/no.html
+++ b/no.html
@@ -56,10 +56,7 @@
 <body>
   <div>
 
-    <div class="gif-container">
-      <div class="tenor-gif-embed" data-postid="17854459431021401358" data-share-method="host" data-aspect-ratio="1.11979" data-width="50%"><a href="https://tenor.com/view/confused-confused-face-gif-17854459431021401358">Confused Confused Face Meme</a>from <a href="https://tenor.com/search/confused-memes">Confused Memes</a></div>
-      <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    </div>
+     <img src="val_images/IMG_0056.jpeg" alt="Valentine image 1" class="val-img">
 
     <h1>Ummm... I think you hit the wong button 😅</h1>
     <p>lets try this again</p>
