Update noagain.html to include a Valentine image
Replaced GIF embed with an image for Valentine's theme.

--- a/noagain.html
+++ b/noagain.html
@@ -50,7 +50,7 @@
 <body>
   <div>
     
-    <div class="tenor-gif-embed" data-postid="15527887901573615997" data-share-method="host" data-aspect-ratio="1.11215" data-width="100%"><a href="https://tenor.com/view/gru-gunpoint-firex-firex-gru-gunpoint-gunpoint-gif-15527887901573615997">Gru Gunpoint Firex Meme</a>from <a href="https://tenor.com/search/gru+gunpoint+firex-memes">Gru Gunpoint Firex Memes</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+ <img src="val_images/IMG_7363.jpeg" alt="Valentine image 1" class="val-img">
     
     <h1>Yeah you must be confused...</h1>
     <p>lets get it right this time</p>
