Add styling for .val-img class in no.html

--- a/no.html
+++ b/no.html
@@ -41,6 +41,14 @@
       border-radius: 0;
     }
 
+    .val-img {
+  width: 260px;
+  display: block;
+  margin: 15px auto;
+  border-radius: 16px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
+}
+
     button:hover {
       transform: scale(1.05);
     }
