Change header text in no.html

--- a/no.html
+++ b/no.html
@@ -66,7 +66,7 @@
 
      <img src="val_images/IMG_0056.jpeg" alt="Valentine image 1" class="val-img">
 
-    <h1>Ummm... I think you hit the wong button 😅</h1>
+    <h1>Ight dawg...</h1>
     <p>lets try this again</p>
     <p>Will you be my Valentine?</p>
     <div class="buttons">
