Add styling for .val-img class in yes.html

--- a/yes.html
+++ b/yes.html
@@ -16,6 +16,14 @@
       color: white;
       text-align: center;
     }
+
+    .val-img {
+  width: 260px;
+  display: block;
+  margin: 15px auto;
+  border-radius: 16px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
+}
   </style>
 </head>
 
