Change image file extension from .jpeg to .PNG

--- a/noagain.html
+++ b/noagain.html
@@ -50,7 +50,7 @@
 <body>
   <div>
     
- <img src="val_images/IMG_7363.jpeg" alt="Valentine image 1" class="val-img">
+ <img src="val_images/IMG_7363.PNG" alt="Valentine image 1" class="val-img">
     
     <h1>Yeah you must be confused...</h1>
     <p>lets get it right this time</p>
