--- a/yes.html
+++ b/yes.html
@@ -31,7 +31,7 @@
   <div>
 
      <img src="val_images/IMG_9914.jpeg" alt="Valentine image 1" class="val-img">
-     <img src="val_images/IMG_9637.jpeg" alt="Valentine image 2" class="val-img">
+     <img src="val_images/IMG_9637.jpg" alt="Valentine image 2" class="val-img">
 
     <h1>Yippeee!!</h1>
     <p> </p>
