Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <img src="val_images/IMG_9031.jpeg" alt="Valentine image 1" class="val-img">
 
-  <h1>Hi My Love 😁<br></h1>
+  <h1>Hi my Choopie Babyyyyyyy 😁<br></h1>
 
   <p>
     I had to make it nerdy just for you,<br>
